Added trigger for open and close doors; Added new game mode; Adde controller for default pawn.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/MyMap.MyMap
 GameDefaultMap=/Game/MyMap.MyMap
+GlobalDefaultGameMode=/Game/BuildingEscapeGameMode_BP.BuildingEscapeGameMode_BP_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
