--- a/BuildingEscape.uproject
+++ b/BuildingEscape.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.23",
+	"EngineAssociation": "4.24",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -16,7 +16,7 @@
 	"Plugins": [
 		{
 			"Name": "FMODStudio",
-			"Enabled": true
+			"Enabled": false
 		}
 	]
 }
